skiplang/compiler/invalid_tests/typechecking/native_no_binding.sk
native fun bare(): Int;

fun main(): void {
  print_string("x=" + bare())
}
